# soc-automation

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  STRUCTURE.md  pyproject.toml
.github/workflows/: ci.yml
docs/container-escape/: cheatsheet.md  labs.md  quickref.md  writeup.md
docs/ssrf/: basic-localhost.md
examples/: http_access.csv  http_access.jsonl
src/sigma_converter/: __init__.py  cli.py  converter.py  web_app.py
src/sigma_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_converter.py
web/templates/: index.html
