[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigma-converter"
version = "0.1.0"
description = "Convert custom application logs into Sigma detection rules with field mapping, transforms, and validation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Kevin Gachoka Gichuhi", email = "creator-kev@users.noreply.github.com" }]
keywords = ["sigma", "soc", "siem", "detection", "rules", "security", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
sigma-conv = "sigma_converter.cli:main"
sigma-web = "sigma_converter.web_app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sigma_converter = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --maxfail=1"

[tool.ruff]
line-length = 100
target-version = "py311"
